fixed header spacing so the headers wouldn't jump

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -43,7 +43,7 @@ table {
   }
 
   .rank {
-    width: 20px;
+    width: 40px;
   }
 
   .image {
@@ -137,7 +137,7 @@ table {
 
 // define colors
 @salary: black;
-@bonus: lighten(#34401B, 10%);
+@bonus: darken(yellow,20%); //lighten(#34401B, 10%);
 @neip: #A9CE56;
 @other: purple;
 @equity: spin(#58903F, 30);
